VPC Lattice/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: lattice-svc
  namespace: default
spec:
  parentRefs:
  - name: lattice-svc-net
    sectionName: http
  rules:
  - backendRefs:
    - name: skills-svc
      kind: Service
      port: 8080
    matches:
    - path:
        type: PathPrefix
        value: /healthcheck
